--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "json-server": "^0.17.2"
+    "json-server": "^0.17.2",
+    "multer": "^1.4.5-lts.1"
   }
 }
